Solutions component manages multiple solutions in tabs

--- a/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
@@ -47,9 +47,8 @@
         </table>
       </div>
 
-      <div class="solutions" *ngIf="insight.isExpanded">
-        <solution *ngFor="let solution of insight.solutions;" [solution]="solution"></solution>
-      </div>
+      <solutions *ngIf="insight.isExpanded" [solutions]="insight.solutions"></solutions>
+
     </div>
   </div>
 </ng-template>
