--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
@@ -14,8 +14,8 @@ html, body {
 }
 
 .solution-description {
-  padding: 1em 0;
-  margin: 1em 0;
+  margin-top: 2em;
+  margin-bottom: 1em;
 }
 
 .solution-action {
