--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
@@ -5,25 +5,29 @@ html, body {
   padding: 0;
 }
 
-.solution-title {
-  padding: 0 1em;
-}
-
 .solution-container {
-  margin: 1em;
+  margin: 2em 5em;
 }
 
 .solution-description {
-  margin-top: 2em;
-  margin-bottom: 1em;
+  margin: 2em 0;
 }
 
 .solution-action {
   display: inline-block;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  background-color: #f1f1f1;
+  padding: 1em;
 
   h3 {
     margin-right: 1em;
     display: inline;
+  }
+
+  .app-name {
+    font-weight: bold;
+    color: #286090;
   }
 
   .custom-button {
