Solutions only show if insight has solutions

--- a/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
@@ -47,7 +47,7 @@
         </table>
       </div>
 
-      <solutions *ngIf="insight.isExpanded" [solutions]="insight.solutions"></solutions>
+      <solutions *ngIf="insight.isExpanded && insight.solutions.length > 0" [solutions]="insight.solutions"></solutions>
 
     </div>
   </div>
