--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -6,7 +6,7 @@
 
   <div *ngIf="!solution.IsInternal; else internal_solution" class="solution-action">
     <div *ngIf="solution.RequiresConfirmation; else dont_confirm_buttons" class="confirm-buttons">
-      <h3>{{solution.ActionName}} for App <span class="app-name">{{appName}}</span>?</h3>
+      <span class="app-name-text">{{solution.ActionName}} for App <span class="app-name">{{appName}}</span>?</span>
       <div class="action-buttons">
         <button type="button" class="custom-button deny">No, Don't {{solution.ActionName}}</button>
         <button type="button" (click)="performAction()" class="custom-button confirm">
@@ -15,12 +15,14 @@
       </div>
     </div>
 
-    {{actionStatus}}
-    <span *ngIf="actionStatus === 'Running...'">
-      <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-    </span>
-    <span *ngIf="actionStatus === 'Complete!'">
-      <i class="fa fa-check-circle" aria-hidden="true"></i>
+    <span class="action-status">
+      {{actionStatus}}
+      <span *ngIf="actionStatus === 'Running...'">
+        <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
+      </span>
+      <span *ngIf="actionStatus === 'Complete!'">
+        <i class="fa fa-check-circle" aria-hidden="true"></i>
+      </span>
     </span>
   </div>
 
@@ -42,7 +44,7 @@
 
 <ng-template #dont_confirm_buttons>
   <div class="action-buttons">
-    <button (click)="performAction()" type="button" class="custom-button">{{solution.Title}}</button>
-    <span class="app-name-text">For App <span class="app-name">{{appName}}</span></span>
+      <span class="app-name-text">App: <span class="app-name">{{appName}}</span></span>
+      <button (click)="performAction()" type="button" class="custom-button">{{solution.Title}}</button>
   </div>
 </ng-template>
