--- a/AngularApp/projects/diagnostic-data/src/lib/components/solutions/solutions.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solutions/solutions.component.scss
@@ -25,6 +25,7 @@
     .panel-title {
         display: inline;
         margin-left: 2em;
+        font-size: 16px;
     }
 
     @include border-radius(0);
