--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -1,12 +1,12 @@
 <div class="solution-container">
 
-  <div *ngIf="solution.Description" class="solution-description">
+  <div *ngIf="solution.Description" class="my-2 mx-0">
     <markdown [data]="solution.Description"></markdown>
   </div>
 
   <div *ngIf="!solution.IsInternal; else internal_solution" class="solution-action">
     <div *ngIf="solution.RequiresConfirmation; else dont_confirm_buttons" class="confirm-buttons">
-      <span class="app-name-text">{{solution.ActionName}} for App <span class="app-name">{{appName}}</span>?</span>
+      <span class="mr-3">{{solution.ActionName}} for App <span class="app-name">{{appName}}</span>?</span>
       <div class="action-buttons">
         <button type="button" class="custom-button deny">No, Don't {{solution.ActionName}}</button>
         <button type="button" (click)="performAction()" class="custom-button confirm">
@@ -15,7 +15,7 @@
       </div>
     </div>
 
-    <span class="action-status">
+    <span class="ml-3">
       {{actionStatus}}
       <span *ngIf="actionStatus === 'Running...'">
         <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
@@ -44,7 +44,7 @@
 
 <ng-template #dont_confirm_buttons>
   <div class="action-buttons">
-      <span class="app-name-text">App: <span class="app-name">{{appName}}</span></span>
+      <span class="mr-3">App: <span class="app-name">{{appName}}</span></span>
       <button (click)="performAction()" type="button" class="custom-button">{{solution.Title}}</button>
   </div>
 </ng-template>
