Time range check on detectors (#284)
* Time range input box will now check for invalid date time range entered on the detector when someone attempts to update the date time.

* Default to last 24 hours in case someone hits the Applens URL directly bypassing the UX control.

* Imported styles from a commong location and changed the location of where the error message is displayed.

* Check to confirm start and end timestamps are not in future.

* Fix formatting

* Removed console messages

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../../app-service-diagnostics/src/styles/main.scss";
+
 .control-container {
     display: flex;
 }
@@ -49,4 +51,8 @@
 
 .date-control > input:focus {
     outline: none;
+}
+
+.errorMessage {
+    color: $error-color;
 }
