--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.html
@@ -10,7 +10,7 @@
           <input class="date-input" [(ngModel)]="endTime" (keyup.enter)="setManualDate()"/>
       </div>
     </div> -->
-
+    
     <div class="control-group" *ngIf="detectorControlService.duration">
       <div (click)="detectorControlService.moveBackwardDuration()" class="control">
         <i class="fa fa-chevron-left"></i>
@@ -23,7 +23,8 @@
     </div>
 
     <div class="control-group">
-      <div *ngFor="let duration of detectorControlService.durationSelections | internal:isInternal" class="control" (click)="detectorControlService.selectDuration(duration)"
+      <div *ngFor="let duration of detectorControlService.durationSelections | internal:isInternal" class="control"
+        (click)="detectorControlService.selectDuration(duration)"
         [class.control-selected]="detectorControlService.duration === duration">{{duration.displayName}}</div>
     </div>
 
@@ -41,16 +42,22 @@
     </div>
 
     <div class="control-group" *ngIf="isInternal">
-        <div class="control" (click)="detectorControlService.toggleInternalExternal()">
-          <span *ngIf="detectorControlService.isInternalView">Internal</span>
-          <span *ngIf="!detectorControlService.isInternalView">External</span>
-        </div>
+      <div class="control" (click)="detectorControlService.toggleInternalExternal()">
+        <span *ngIf="detectorControlService.isInternalView">Internal</span>
+        <span *ngIf="!detectorControlService.isInternalView">External</span>
       </div>
+    </div>
 
     <div class="control-group">
       <div class="control" (click)="detectorControlService.refresh()">
         <i class="fa fa-refresh"></i>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="outer-container" *ngIf="timeDiffError !==''">
+  <div class=" errorMessage">
+      <strong>Error :</strong> {{timeDiffError}}<span style='vertical-align:super'>*</span>
   </div>
 </div>
