Fix code style for main page of applens

--- a/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.scss
@@ -1,3 +1,19 @@
 td, th {
     padding:5px;
 }
+
+.outer-container {
+    padding: 20px;
+}
+
+.alert-container {
+    margin-left: -20px;
+}
+
+.resource-info {
+    margin-top: 3em;
+}
+
+.detector-list {
+    margin-top: 3em;
+}
