--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-common/tab-common.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-common/tab-common.component.scss
@@ -9,6 +9,11 @@ body {
   padding: 10px;
 }
 
+.nav-container {
+  padding-top: 10px;
+  background-color: #ecf0f5;
+}
+
 .tab-container {
   overflow-y: scroll;
 }
