--- a/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.scss
@@ -6,14 +6,10 @@ td, th {
     padding: 20px;
 }
 
+.content-card {
+    margin-bottom: 3em;
+}
+
 .alert-container {
     margin-left: -20px;
-}
-
-.resource-info {
-    margin-top: 3em;
-}
-
-.detector-list {
-    margin-top: 3em;
 }
