--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" [style.height]="contentHeight" style="background-color: #e4e4e4;">
+<div class="container-fluid" style="background-color: #e4e4e4;">
   <div class="row" style="padding-top: 200px">
     <div class="col-md-6 col-md-offset-3">
       <div class="box box-primary">
