--- a/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.scss
@@ -1,3 +1,8 @@
+.main-sidebar {
+  height: calc(100vh - 50px);
+  overflow-y: scroll;
+  padding: 0;
+}
 
 .sidebar-menu > li > a {
     cursor: pointer;
