--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-gist-common/tab-gist-common.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-gist-common/tab-gist-common.component.html
@@ -1,6 +1,6 @@
-<div>
-  <div style="padding-top:10px;background-color: #ecf0f5;">
-    <ul class="nav nav-tabs" style="padding-left:20px;">
+<div class="tab-gist">
+  <div class="toolbar-container">
+    <ul class="nav nav-tabs">
       <li class="nav-item">
         <a [routerLink]="['.']" preserveFragment queryParamsHandling="preserve"
           [routerLinkActive]="['active', 'active-tab']" [routerLinkActiveOptions]="{exact:true}">Develop</a>
@@ -12,7 +12,7 @@
     </ul>
   </div>
   <div>
-    <div class="tab-container" [style.height]="contentHeight">
+    <div class="tab-container">
       <router-outlet></router-outlet>
     </div>
   </div>
