--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-monitoring-develop/tab-monitoring-develop.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-monitoring-develop/tab-monitoring-develop.component.scss
@@ -14,3 +14,7 @@ li .reportlink {
     color : rgb(108, 2, 247)!important;
     background-color: white
 }
+
+.flow-container {
+  height: calc(100vh - 100px);
+}
