--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-gist-develop/tab-gist-develop.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-gist-develop/tab-gist-develop.component.html
@@ -1,4 +1,4 @@
-<div style="height:100%">
+<div class="flow-container">
   <onboarding-flow [mode]="DevelopMode.Edit" [id]="id" [gistMode]="true">
   </onboarding-flow>
 </div>
