Fixed left menu scrolling; Only detector list scrolls, search bar remains in fixed position

--- a/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.scss
@@ -1,7 +1,11 @@
 .main-sidebar {
   height: calc(100vh - 50px);
-  overflow-y: scroll;
   padding: 0;
+}
+
+menu-scroll {
+  // navbar + title + search box = 50 + 45 + 44 = 139
+  height: calc(100vh - 139px);
 }
 
 .sidebar-menu > li > a {
