--- a/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.html
@@ -1,32 +1,32 @@
 <aside class="main-sidebar">
 
-    <section class="sidebar">
+  <section class="sidebar">
 
-        <div class="user-panel" [class.active]="doesMatchCurrentRoute('home')" (click)="navigateTo('home')">
-            <div class="pull-left image">
-                <img [src]="resourceService.imgSrc" class="resource-logo" style="max-width:25px">
-            </div>
-            <div class="info">
-                <p>{{resourceService.getResourceName()}}</p>
-            </div>
-        </div>
+    <div class="user-panel" [class.active]="doesMatchCurrentRoute('home')" (click)="navigateTo('home')">
+      <div class="pull-left image">
+        <img [src]="resourceService.imgSrc" class="resource-logo" style="max-width:25px">
+      </div>
+      <div class="info">
+        <p>{{resourceService.getResourceName()}}</p>
+      </div>
+    </div>
 
-        <collapsible-menu theme="dark" [height]="contentHeight">
-            <search-box [(searchValue)]="searchValue"></search-box>
-            <menu-scroll>
-                <section-divider label="Create">
-                    <collapsible-menu-item *ngFor="let item of createNew" [menuItem]="item"></collapsible-menu-item>
-                </section-divider>
-                <section-divider label="Documentation">
-                    <collapsible-menu-item *ngFor="let doc of documentation" [menuItem]="doc"></collapsible-menu-item>
-                </section-divider>
-                <section-divider label="Detectors">
-                    <collapsible-menu-item *ngFor="let category of categories" [searchValue]="searchValue" [menuItem]="category"></collapsible-menu-item>
-                </section-divider>
-                <section-divider label="Gists">
-                    <collapsible-menu-item *ngFor="let gist of gists" [searchValue]="searchValue" [menuItem]="gist"></collapsible-menu-item>
-                </section-divider>
-            </menu-scroll>
-        </collapsible-menu>
-    </section>
+    <collapsible-menu theme="dark">
+      <search-box [(searchValue)]="searchValue"></search-box>
+      <menu-scroll>
+        <section-divider label="Create">
+          <collapsible-menu-item *ngFor="let item of createNew" [menuItem]="item"></collapsible-menu-item>
+        </section-divider>
+        <section-divider label="Documentation">
+          <collapsible-menu-item *ngFor="let doc of documentation" [menuItem]="doc"></collapsible-menu-item>
+        </section-divider>
+        <section-divider label="Detectors">
+          <collapsible-menu-item *ngFor="let category of categories" [searchValue]="searchValue" [menuItem]="category"></collapsible-menu-item>
+        </section-divider>
+        <section-divider label="Gists">
+          <collapsible-menu-item *ngFor="let gist of gists" [searchValue]="searchValue" [menuItem]="gist"></collapsible-menu-item>
+        </section-divider>
+      </menu-scroll>
+    </collapsible-menu>
+  </section>
 </aside>
