--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid" style="background-color: #e4e4e4;">
-  <div class="row" style="padding-top: 200px">
+<div class="container-fluid" style="background-color: #e4e4e4; height: 100vh;">
+  <div class="row" style="padding-top: 30vh;">
     <div class="col-md-6 col-md-offset-3">
       <div class="box box-primary">
         <div class="box-header with-border">
