--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.scss
@@ -1,16 +1,16 @@
 .content {
     position: absolute;
-    height:100%;
+    height: 100vh;
     width: 100%;
 }
 
 .main-container {
     padding-left: 250px;
-    height: 100%;
+    height: 100vh;
 }
 
 .dropdown-item {
-    cursor: pointer;    
+    cursor: pointer;
 }
 
 .dropdown-menu > .disabled {
