--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.scss
@@ -1,16 +1,20 @@
-.content {
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-}
-
 .main-container {
-    padding-left: 250px;
+    background-color: #e4e4e4; 
     height: 100vh;
 }
 
-.dropdown-item {
-    cursor: pointer;
+.main-row {
+    padding-top: 30vh;
+}
+
+.go-form {
+    padding: 1em;
+    text-align: right;
+}
+
+.go-button {
+    width: 50px;
+    margin-top: 10px;
 }
 
 .dropdown-menu > .disabled {
@@ -18,11 +22,11 @@
     color: #dddddd;
 }
 
-.errorMessage-Container{
+.error-msg-container{
     border:4px solid white;
 }
 
-.errorMessage-Container .errorMessage{
+.error-msg-container .errorMessage{
     white-space: pre-wrap;
     overflow-wrap: break-word;
     height:80%;
