--- a/AngularApp/projects/applens/src/app/modules/site/site-finder/site-finder.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/site/site-finder/site-finder.component.scss
@@ -1,5 +1,25 @@
+.main-container {
+    background-color: #e4e4e4;
+}
+
+.multiple-sites {
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+}
+
+.matching-site {
+    margin: 5px;
+    float: left;
+}
+
+.main-panel {
+    width: 40rem;
+}
+
 .big-text {
     padding: 100px;
     font-size: 30px;
-    height:100%;
+    height: 100%;
 }
+
