--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.scss
@@ -1,3 +1,36 @@
+@import '../../../../styles/main.scss';
+
 .app-nav-bar {
     background-color: #ffffff;
+}
+
+#app-content {
+    height: 70%;
+
+    // Dynamic heights are necessary to follow the iFrame height while providing as much room
+    // for content as possible
+    @include xs-height {
+        // 320px
+        height: 82%;
+    }
+
+    @include sm-height {
+        // 432px
+        height: 87%;
+    }
+
+    @include md-height {
+        // 576px
+        height: 90%;
+    }
+
+    @include lg-height {
+        // 744px
+        height: 92%
+    }
+
+    @include xl-height {
+        // 900px
+        height: 93%
+    }
 }
