--- a/AngularApp/projects/app-service-diagnostics/src/styles/common/_variables.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles/common/_variables.scss
@@ -253,3 +253,10 @@ $chat-message-user-text-color: $body-bg-color;
 
 $tile-color: $primary-color;
 $tile-text-color: $body-bg-color;
+
+// Screen size variables
+$screen-xs-min: 425px;
+$screen-sm-min: 576px;
+$screen-md-min: 768px;
+$screen-lg-min: 992px;
+$screen-xl-min: 1200px;
