--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
@@ -5,14 +5,14 @@ html, body {
   padding: 0;
 }
 
-.solution-container {
-  margin: 2em 5em;
+.solution-description {
+  margin-bottom: 2em;
 }
 
 .solution-action {
   display: inline-block;
-  border: 1px solid lightgray;
   border-radius: 2px;
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   background-color: #f1f1f1;
   padding: 1em;
 
@@ -56,11 +56,16 @@ html, body {
   margin: 0;
 }
 
-.copy-instructions {
-  float: right;
-  cursor: pointer;
+.internal-instructions {
+  color: hsl(0, 0%, 50%);
 }
 
-.internal-instructions {
-  margin-right: 5em;
+.support-directions {
+  font-weight: 700;
+  margin-bottom: 0.5em;
+}
+
+.copy-text {
+  float: right;
+  margin-top: -7px;
 }
