Fix Layouts Causing Multiple Scroll Windows (#291)

--- a/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.scss
@@ -1,3 +1,15 @@
 td, th {
     padding:5px;
 }
+
+.outer-container {
+    padding: 20px;
+}
+
+.content-card {
+    margin-bottom: 3em;
+}
+
+.alert-container {
+    margin-left: -20px;
+}
