--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.scss
@@ -1,3 +1,9 @@
+@import '../../../../styles/main.scss';
+
 .app-nav-bar {
     background-color: #ffffff;
+}
+
+#app-content {
+    height: calc(100vh - 56px);
 }
