--- a/AngularApp/projects/app-service-diagnostics/src/styles/common/_variables.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles/common/_variables.scss
@@ -260,3 +260,8 @@ $screen-sm-min: 576px;
 $screen-md-min: 768px;
 $screen-lg-min: 992px;
 $screen-xl-min: 1200px;
+$screen-xs-height-min: 320px;
+$screen-sm-height-min: 432px;
+$screen-md-height-min: 576px;
+$screen-lg-height-min: 744px;
+$screen-xl-height-min: 900px;
