--- a/AngularApp/projects/applens/src/app/collapsible-menu/components/menu-scroll/menu-scroll.component.scss
+++ b/AngularApp/projects/applens/src/app/collapsible-menu/components/menu-scroll/menu-scroll.component.scss
@@ -1,6 +1,6 @@
 #scroll-container {
+    height: inherit;
     overflow-y: scroll;
-    height:100%;
 }
 
 :host-context(.dark-theme) ::-webkit-scrollbar {
@@ -11,7 +11,7 @@
 :host-context(.dark-theme) ::-webkit-scrollbar-track {
     background: #222d32;
 }
- 
+
 /* Handle */
 :host-context(.dark-theme) ::-webkit-scrollbar-thumb {
     background: #838383;
@@ -19,5 +19,5 @@
 
 /* Handle on hover */
 :host-context(.dark-theme) ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: #555;
 }
