--- a/AngularApp/projects/applens/src/app/modules/ase/ase-finder/ase-finder.component.html
+++ b/AngularApp/projects/applens/src/app/modules/ase/ase-finder/ase-finder.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" [style.height]="contentHeight" style="background-color: #e4e4e4;">
+<div class="container-fluid main-container">
     <div class="big-text" *ngIf="loading">Searching for ASE ...</div>
     <div class="big-text" *ngIf="!loading && error">{{error}}</div>
     <div class="big-text" *ngIf="!loading && !error">Redirecting to ASE {{hostingEnvironment}}</div>
