--- a/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/side-nav/side-nav.component.scss
@@ -1,3 +1,12 @@
+.main-sidebar {
+  height: calc(100vh - 50px);
+  padding: 0;
+}
+
+menu-scroll {
+  // navbar + title + search box = 50 + 45 + 44 = 139
+  height: calc(100vh - 139px);
+}
 
 .sidebar-menu > li > a {
     cursor: pointer;
