Set height of content-wrapper

--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.scss
@@ -21,6 +21,7 @@ side-nav {
     color: #ffb353
 }
 
-.content-wrapper .white-background {
-  min-height: 0;
+.content-wrapper.white-background {
+  min-height: calc(100vh - 50px);
+  height: 100%;
 }
